# lean-mlir

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  404.html  Alive.html  Alive.html.trace  Alive.lean  Dockerfile  Init.html  LICENSE  Lake.html  Lean.html  Learnings.txt  OUT  Preprocessing2.lean  README.md  SLOWDOWN.md  SSA.html  SSA.html.trace  SSA.lean  SSASlow.lean  Snakefile  automata-test.sh  bb0i1.mlir  bb1.mlir  bb2.mlir  bb3.ll  bb3.mlir  bb4.mlir  bit_vector_add_proofs.lean  bit_vector_general.lean  bit_vector_mul_proofs.lean  config.yaml  declaration-data.js  docgen.sh  failed  flake.nix  foundational_types.html  (+25 more)
.devcontainer/: devcontainer.json
.dockerscripts/: cache.sh  cache_setup.sh  cache_teardown.sh
.github/: CODEOWNERS
Alive/: AddSub.lean  Template.lean
Blase/: Blase.lean  BlaseEval.lean  BlaseTest.lean  Blasewuzla.lean  BlasewuzlaMain.lean  PLAN  README.md  Test.lean  lake-manifest.json  lakefile.toml
BvDecideParametric/: BvDecideParametric.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
EvaluationHarness/: EvaluationHarness.lean  Main.lean  README.md  lakefile.toml
Hoare/: Hoare.lean  ImpSeq.lean
Init/: Classical.html  Coe.html  Control.html  Conv.html  Core.html  Data.html  Dynamic.html  Hints.html  Meta.html  Notation.html  NotationExtra.html  Prelude.html  ShareCommon.html  SimpLemmas.html  SizeOf.html  SizeOfLemmas.html  System.html  Tactics.html  Util.html  WF.html  WFTactics.html
Lake/: Build.html  Config.html  DSL.html  Version.html
Lean/: Attributes.html  AuxRecursor.html  Class.html  Compiler.html  CoreM.html  Data.html  Declaration.html  DeclarationRange.html  DocString.html  Elab.html  Environment.html  Eval.html  Exception.html  Expr.html  HeadIndex.html  Hygiene.html  ImportingFlag.html  InternalExceptionId.html  KeyedDeclsAttribute.html  LazyInitExtension.html  Level.html  Linter.html  LoadDynlib.html  LocalContext.html  Log.html  Message.html  Meta.html  Modifiers.html  (+17 more)
(+85745 files in other folders)
