[project]
name = "lean-mlir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs==1.4.4",
    "argparse-dataclass==2.0.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "conda-inject==1.3.2",
    "configargparse==1.7.1",
    "connection-pool==0.0.3",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "docopt==0.6.2",
    "docutils==0.22",
    "dpath==2.2.0",
    "fastjsonschema==2.21.2",
    "fonttools==4.56.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "humanfriendly==10.0",
    "idna==3.10",
    "immutables==0.21",
    "importlib-metadata==8.6.1",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "nbformat==5.10.4",
    "num2words==0.5.14",
    "numpy==2.2.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "platformdirs==4.3.8",
    "polars==1.24.0",
    "psutil==7.0.0",
    "pulp==3.2.2",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.5",
    "reretry==0.11.8",
    "rpds-py==0.27.0",
    "six==1.17.0",
    "smart-open==7.3.0.post1",
    "smmap==5.0.2",
    "snakemake==9.9.0",
    "snakemake-interface-common==1.21.0",
    "snakemake-interface-executor-plugins==9.3.9",
    "snakemake-interface-logger-plugins==1.2.4",
    "snakemake-interface-report-plugins==1.2.0",
    "snakemake-interface-storage-plugins==4.2.2",
    "tabulate==0.9.0",
    "throttler==1.2.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.1",
    "urllib3==2.5.0",
    "visidata==3.1.1",
    "wrapt==1.17.3",
    "yte==1.9.0",
    "zipp==3.21.0",
]
